--- a/Sunday Wishes/style.css
+++ b/Sunday Wishes/style.css
@@ -5,6 +5,7 @@ body{
     justify-content: center;
     align-items: center;
     display: flex;
+    flex-wrap: wrap;
     font-family: cursive;
     min-height: 90vh;
 }
